# pico_clock

./: CMakeLists.txt  README.md  autobuild.sh  build.sh  pimoroni_pico_import.cmake
src/: battery.c  battery.cpp  battery.h  battery.hpp  button_handler.c  button_handler.cpp  button_handler.h  button_handler.hpp  constants.h  constants.hpp  custom_font.hpp  display.cpp  display.h  main.c  main.cpp  power_manager.c  power_manager.cpp  power_manager.h  power_manager.hpp  rtc.c  rtc.cpp  rtc.h  rtc.hpp  screen.cpp  screen.hpp  types.h  ui.c  ui.cpp  ui.h  ui.hpp  ui_controller.c  ui_controller.h  ui_view.c  ui_view.h  utils.c  utils.cpp  utils.h  utils.hpp
src/middleware/: button_handler.c
src/peripherals/: battery.c  battery.h  buttons.c  buttons.h  display.cpp  display.h  peripherals.c  peripherals.h  rtc.c  rtc.h
src/ui/: ui.c  ui.h  ui_controller.c  ui_controller.h  ui_model.c  ui_model.h  ui_view.c  ui_view.h
